# AutoRules

./: auto_rules.py  pyproject.toml
