[project]
name = "auto-rules"
version = "0.1.0"
description = "자동 규칙 생성을 위한 MCP 서버"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "mcp[cli]>=1.3.0"
]

[project.scripts]
auto-rules = "auto_rules:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["auto_rules"]