[project]
name = "auto-rules"
version = "0.1.0"
description = "자동 규칙 생성을 위한 MCP 서버"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.3.0"
]

[project.scripts]
auto-rules = "auto_rules:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["auto_rules"]
